Updates minimum Java requirement to 18 and updates foreign memory access calls to align with changes from JDK17 to JDK18.